Fix some Java warnings + move to multi-line strings